tests/baselines/reference/numericIndexExpressions.errors.txt
tests/cases/compiler/numericIndexExpressions.ts(10,1): error TS2322: Type '4' is not assignable to type '文字'.
tests/cases/compiler/numericIndexExpressions.ts(11,1): error TS2322: Type '4' is not assignable to type '文字'.
tests/cases/compiler/numericIndexExpressions.ts(14,1): error TS2322: Type '4' is not assignable to type '文字'.
tests/cases/compiler/numericIndexExpressions.ts(15,1): error TS2322: Type '4' is not assignable to type '文字'.


==== tests/cases/compiler/numericIndexExpressions.ts (4 errors) ====
    interface Numbers1 {
        1: string;
    }
    interface Strings1 {
        '1': string;
    }
     
     
    var x: Numbers1;
    x[1] = 4; // error
    ~~~~
!!! error TS2322: Type '4' is not assignable to type '文字'.
    x['1'] = 4; // error
    ~~~~~~
!!! error TS2322: Type '4' is not assignable to type '文字'.
    
    var y: Strings1;
    y['1'] = 4; // should be error
    ~~~~~~
!!! error TS2322: Type '4' is not assignable to type '文字'.
    y[1] = 4; // should be error
    ~~~~
!!! error TS2322: Type '4' is not assignable to type '文字'.